fix(#4200): use block-size: max-content instead of align-self: start

--- a/packages/@adobe/spectrum-css-temp/components/inputgroup/skin.css
+++ b/packages/@adobe/spectrum-css-temp/components/inputgroup/skin.css
@@ -13,8 +13,6 @@ governing permissions and limitations under the License.
 .spectrum-InputGroup {
   background: var(--spectrum-textfield-background-color);
 
-  align-self: start;
-
   .spectrum-FieldButton {
     &:before {
       border-color: var(--spectrum-textfield-border-color);
